--- a/src/style/end.css
+++ b/src/style/end.css
@@ -2,8 +2,7 @@
   position: relative;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(140deg, #8090a4 40%, transparent 0%),
-    linear-gradient(190deg, #3b4755 50%, transparent 0%), #6d8191;
+  background-color: #5a779a;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -13,12 +12,17 @@
 }
 
 .current-score {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
+  box-shadow: 0 0 50px #48658d;
+  background-color: #7194be;
+  border-radius: 2vh;
   z-index: 1000;
-  width: 20vw;
-  height: 100%;
+  width: 15vw;
+  margin-left: 2.5vw;
+  height: 45%;
+  margin-top: 30vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,7 +30,10 @@
 }
 
 .current-score h1 {
+  -webkit-text-stroke: 1px #11324d;
   font-weight: 700;
+  font-size: calc(1.5vh + 1.5vw);
+  letter-spacing: 0.1vw;
 }
 
 .current-score .ranking-number {
@@ -36,18 +43,22 @@
 .teamicon {
   display: flex;
   text-align: center;
-  height: 2.5vh;
+  height: 4vh;
   margin-top: 0.1vh;
 }
 
 .header {
   text-align: center;
 }
+
 .header h1 {
+  font-weight: 900;
   font-size: 7vh;
-  -webkit-text-stroke: 2px #11324d;
+  -webkit-text-stroke: 0.3vh #11324d;
   margin: 8px 0;
+  letter-spacing: 0.3vw;
 }
+
 .logo {
   position: absolute;
   height: 11vh;
@@ -75,17 +86,14 @@
 }
 
 .wrap {
-  margin-top: -2vh;
-  position: relative;
+  position: absolute;
   background-color: #f0f4f8;
   border: 5px solid #11324c;
   border-radius: 20px;
   padding: 10px;
-  display: flex;
   width: 60vw;
   gap: 10vh;
-  justify-content: center;
-  align-items: center;
+  top: 18vh;
 }
 
 .team-ranking {
@@ -118,7 +126,7 @@
 .overall-ranking h1 {
   margin: 10px;
   margin-bottom: 20px;
-  color: #11324c;
+  color: #00477d;
   font-weight: 900;
 }
 .myranking {
@@ -133,6 +141,7 @@
   padding: 10px;
   border-radius: 10px;
 }
+
 .ranking-item {
   display: block;
   align-items: center;
@@ -147,6 +156,7 @@
   grid-template-rows: repeat(5, auto);
   column-gap: 2vh;
   grid-auto-flow: column;
+  margin-left: 2vw;
 }
 
 .ranking-loading {
@@ -166,24 +176,75 @@
   column-gap: 2vh;
 }
 
+.ranking-num {
+  font-family: "Cafe24Ssurround";
+  border-radius: 5px;
+  color: #235073;
+  background: linear-gradient(to bottom, #f9f9f9, #e6e6e6);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  border: 3px solid #11324c;
+  margin: 10px 0;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  width: 12vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .ranking-number {
   font-family: "Cafe24Ssurround";
   border-radius: 5px;
   color: #11324c;
   background: linear-gradient(to bottom, #f9f9f9, #e6e6e6);
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 5px 10px;
   font-size: 0.9rem;
   font-weight: bold;
   border: 3px solid #11324c;
   margin: 10px 0;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  width: 25vw;
 }
 
-.ranking-number span {
-  margin: 0 5px;
+.ranking-number .rank-info {
+  display: flex;
+  align-items: center;
+  min-width: 80px;
+  
+}
+
+.ranking-number .teamicon {
+  height: 4vh;
+  margin-right: 5px;
+}
+
+.ranking-number .rank-text {
+  color: #3b4755;
+  white-space: nowrap;
+  position: absolute;
+  margin-left: 3vw;
+}
+
+.ranking-number .player-name {
+  color: #3b4755;
+  flex-grow: 1;
+  text-align: left;
+  margin-left: 2vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ranking-number .player-score {
+  color: white;
+  -webkit-text-stroke: 1.5px #11324d;
+  white-space: nowrap;
 }
 
 .username {
@@ -199,16 +260,20 @@
     max-width: 16vh;
   }
 }
+
 .home-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 6vh;
-  padding: 5px;
+  position: absolute;
+  width: 7vh;
+  height: 7vh;
+  padding: 8px;
   background-color: #f0f4f8;
   color: #11324c;
   border: none;
-  border-radius: 10px;
+  top: 86vh;
+  border-radius: 1.5vh;
   cursor: pointer;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
