--- a/src/style/game.css
+++ b/src/style/game.css
@@ -43,7 +43,8 @@
 }
 
 .profile img {
-  height: 100%;
+  height: 90%;
+  margin-top: 10%;
 }
 
 .happy-image {
@@ -117,69 +118,59 @@
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   width: 28vw;
   height: 9vh;
   margin-top: 7vh;
   margin-left: -8vw;
-  padding: 0 2vw;
-  border-radius: 4vw / 6vh;
-  background: linear-gradient(145deg, #8fc1d9, #9bc3e0, #b0d2e9);
-  border: 0.27vh solid #568da8;
-  animation: pulse 2s infinite;
+  padding: 0 1.5vw;
+  border-radius: 4vh;
+  background: linear-gradient(145deg, #9fb9d5, #d5e3f1);
+  border: 0.27vh solid #11324c;
+  box-shadow: 0 0 0 0.1vh #539cf0, 0 0 0 0.18vh #6d7c8e;
+  animation: gentle-pulse 3s infinite;
   min-width: 350px;
 }
 
 .ranking::before {
   content: "현재 ";
-  font-size: 4.5vh;
-  color: #e0e0e0;
-  margin-right: 1.5vw;
+  font-size: 3.5vh;
+  margin-top: 0.8vh;
+  color: #11324d;
+  margin-right: 1vw;
   font-weight: 900;
-  text-shadow: 0 0 2vh #579fc4;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
 }
 
-@keyframes pulse {
+.ranking::after {
+  content: "등";
+  font-size: 3.5vh;
+  margin-top: 1vh;
+  color: #143b5a;
+  margin-right: 1vw;
+  font-weight: 900;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+}
+
+@keyframes gentle-pulse {
   0% {
     transform: scale(1);
-    box-shadow: 0 8px 3px rgba(0, 0, 0, 0.4);
   }
   50% {
     transform: scale(1.02);
-    box-shadow: 0 11px 12px rgba(0, 0, 0, 0.45);
   }
   100% {
     transform: scale(1);
-    box-shadow: 0 8px 3px rgba(0, 0, 0, 0.4);
   }
 }
 
 .ranking_number {
   position: relative;
-  font-size: 7.5vh;
-  margin-right: 1vw;
+  font-size: 6vh;
+  margin-right: 0.7vw;
   font-weight: 900;
-  color: #e0e0e0;
-  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-  animation: neon 2s infinite;
-}
-
-@keyframes neon {
-  0% {
-    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9,
-      0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
-    transform: scale(1);
-  }
-  50% {
-    text-shadow: 0 0 5px #66b0d4, 0 0 10px #66b0d4, 0 0 15px #66b0d4,
-      0 0 20px #66b0d4, 0 0 25px #66b0d4;
-    transform: scale(1.02);
-  }
-  100% {
-    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9,
-      0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
-    transform: scale(1);
-  }
+  color: #094170;
+  text-shadow: 0 0 0.3vh #539cf0, 0 0 0.4vh #539cf0;
 }
 
 .rankbox {
@@ -190,7 +181,7 @@
   margin-left: 19%;
   border-radius: 15px;
   background: linear-gradient(135deg, #9fb9d5, #d5e3f1);
-  border: 0.27vh solid #11324c;
+  border: 0.3vh solid #11324c;
   box-shadow: 0 0 0 0.15vh #539cf0, 0 0 0 0.4vh #6d7c8e;
   overflow: visible;
 }
@@ -254,15 +245,15 @@
 }
 
 .rankbox_first div {
-  width: 70%;
+  width: 75%;
 }
 
 .rankbox_second div {
-  width: 70%;
+  width: 75%;
 }
 
 .rankbox_third div {
-  width: 70%;
+  width: 75%;
 }
 
 .rankbox_first div p {
@@ -281,24 +272,6 @@
   background: linear-gradient(to right, #c0c0c0, #e6e6e6);
   border: 0.22vh solid #a9a9a9;
   color: #4f4f4f;
-}
-
-.rankbox_first .rankbox_num {
-  background: linear-gradient(#ffd700, #ffec8b);
-  color: #8b6313;
-  border: 0.17vh solid #daa520;
-}
-
-.rankbox_second .rankbox_num {
-  background: linear-gradient(#c0c0c0, #e6e6e6);
-  color: #4f4f4f;
-  border: 0.17vh solid #a9a9a9;
-}
-
-.rankbox_third .rankbox_num {
-  background: linear-gradient(#cd7f32, #deb887);
-  color: #8b4513;
-  border: 0.17vh solid #9a6742;
 }
 
 .rightcontainer {
@@ -355,9 +328,8 @@
   text-decoration: none;
   border-radius: 0.4vh;
   padding-top: 0.2vh;
-  padding-left: 0.5vw;
-  padding-right: 0.5vw;
   font-family: "Cafe24Ssurround";
+  width: 5.5vw;
 }
 
 .hidden-word {
